# EV_HMI_SV

./: .gitignore
Admin/: Admin.cpp  Admin.h  Admin.ui  CMakeLists.txt  Dia_HMI.cpp  Dia_HMI.h  Dia_HMI.ui  Dia_Register.cpp  Dia_Register.h  Dia_Register.ui  Dia_Register_HMI.cpp  Dia_Register_HMI.h  Dia_Register_HMI.ui  Dia_ad.cpp  Dia_ad.h  Dia_ad.ui  Dia_membership_card.cpp  Dia_membership_card.h  Dia_membership_card.ui  MD_ChargingLog.cpp  MD_ChargingLog.h  MD_ChargingLog.ui  main.cpp
Admin/CppModule/: MD_charging_log.cpp  MD_charging_log.h  MD_hmi_current_stat.cpp  MD_hmi_current_stat.h  MD_hmi_device.cpp  MD_hmi_device.h  MD_membership_card.cpp  MD_membership_card.h  MD_membership_log.cpp  MD_membership_log.h  MD_store_user.cpp  MD_store_user.h  WK_soc.cpp  WK_soc.h
Admin/Qml_Module/: BackGround.qml  Rec_data.qml  Rec_header.qml  Rec_header_2.qml  View_ChargingLog.qml  View_hmi_current_stat.qml  View_hmi_device.qml  View_membership_card.qml  View_membership_log.qml  View_store_user.qml
Common/: StatData.h
Diagram/: CMakeLists.txt  Main.qml  main.cpp
Diagram/Qml_Module/: Group_AWS.qml  Group_Admin.qml  Group_Local.qml  Line_head.qml  Line_head_2.qml  Line_head_3.qml  Rec_lb.qml
HMI/: CMakeLists.txt  CMakeLists.txt.user.53196e1  Card_Failed.qml  Card_Ready.qml  Card_Socket.qml  Charging_Complet.qml  Charging_Monitoring.qml  Charging_Ready.qml  Disconnect_nomal.qml  Ems_Charging.qml  Ems_Nomal.qml  HMI_main.qml  Input_Kwh.qml  Input_Time.qml  Input_Won.qml  Main.qml  Maintenance.qml  Select_amount.qml  Select_card.qml  Select_charge.qml  Start_page.qml  Test.qml  main.cpp
HMI/Cpp_Module/: Cpp_Module.cpp  Cpp_Module.h  StatStore.cpp  StatStore.h  WK_Serial.cpp  WK_Serial.h  WK_WebSocket.cpp  WK_WebSocket.h
HMI/Mermaid_flow/: flow.md
HMI/Qml_Module/: BackGround_Amount.qml  BackGround_Card.qml  BackGround_Plus.qml  BtnGreen.qml  BtnLed.qml  Keypad_New.qml  Keypad_Number.qml  Popup_Text.qml  Popup_Text_card_err.qml  Rec_Number.qml
HMI/SQLITE/: db_lite.sqlite3
HttpSv/: CMakeLists.txt  HttpSv.cpp  HttpSv.h  main.cpp
Launcher/: .clangd  Launcher.cpp  launcher  launcher_arm64
Modbus RTU/: Config.ini
Modbus RTU/skin/: SkinConfig.xml
Test_cli/: CMakeLists.txt  Cpp_cli.cpp  Cpp_cli.h  main.cpp
Test_sv/: CMakeLists.txt  CMakeLists.txt.user.c4112a4  Cpp_Sv.cpp  Cpp_Sv.h  main.cpp
WebSocSv/: BackBtn.qml  CMakeLists.txt  Main.qml  SV_info_page.qml  Start_page.qml  StoreManagement.qml  main.cpp
WebSocSv/Cpp_Module/: Cpp_Module.cpp  Cpp_Module.h  DB_PostgreSQL.cpp  DB_PostgreSQL.h  Hub.cpp  Hub.h  StatModel.cpp  StatModel.h  WK_Soc.cpp  WK_Soc.h
WebSocSv/Qml_Module/: BackGround.qml  PopUp_CreateStore_DB.qml  Popup_Text.qml  RecBtn.qml
WebSocSv/SQLITE/: db_lite.sqlite3
mcu/test/.metadata/: .log4j2.xml  version.ini
mcu/test/.metadata/.plugins/org.eclipse.cdt.core/: test1.1770710104782.pdom  test1.language.settings.xml
mcu/test/.metadata/.plugins/org.eclipse.core.resources/.projects/test1/: .location  .markers
mcu/test/.metadata/.plugins/org.eclipse.core.resources/.projects/test1/.indexes/: properties.index
mcu/test/.metadata/.plugins/org.eclipse.core.resources/.projects/test1/.indexes/bf/c4/: history.index
mcu/test/.metadata/.plugins/org.eclipse.core.resources/.root/: 11.tree
mcu/test/.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
mcu/test/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
mcu/test/.metadata/.plugins/org.eclipse.debug.ui/: launchConfigurationHistory.xml
mcu/test/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
mcu/test/.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
mcu/test/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
mcu/test/test1/: .cproject  test1 Debug.launch  test1.ioc
mcu/test/test1/Core/Inc/: stm32f1xx_it.h
mcu/test/test1/Core/Src/: main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
mcu/test/test1/Debug/: makefile  objects.list  test1.elf  test1.list  test1.map
mcu/test/test1/Debug/Core/Src/: crc16.cyclo  crc16.d  crc16.su  main.cyclo  main.su  stm32f1xx_hal_msp.cyclo  stm32f1xx_hal_msp.su  subdir.mk
psql_backUp/: all_ubuntu_fixed.sql
service/: icon.desktop  service.sh  test.service  test.service_amd
ssl/: openssl-san.cnf  server.crt  server.key
