cmake_minimum_required(VERSION 3.16)

project(WebSocSv VERSION 0.1 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(Qt6 REQUIRED COMPONENTS Quick)
find_package(Qt6 REQUIRED COMPONENTS Core)
find_package(Qt6 REQUIRED COMPONENTS WebSockets)
find_package(Qt6 REQUIRED COMPONENTS Core)
find_package(Qt6 REQUIRED COMPONENTS Core)


qt_standard_project_setup(REQUIRES 6.8)

qt_add_executable(appWebSocSv
    main.cpp
)

qt_add_qml_module(appWebSocSv
    URI WebSocSv
    VERSION 1.0
    QML_FILES
        Main.qml
        Start_page.qml
        SV_info_page.qml
        BackBtn.qml

    SOURCES
        ./Cpp_Module/Cpp_Module.h ./Cpp_Module/Cpp_Module.cpp
        ./Cpp_Module/StatModel.h ./Cpp_Module/StatModel.cpp
        ./Cpp_Module/Hub.h ./Cpp_Module/Hub.cpp
        ./Cpp_Module/WK_Soc.h ./Cpp_Module/WK_Soc.cpp
        ../Common/StatData.h

)

# Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
# If you are developing for iOS or macOS you should consider setting an
# explicit, fixed bundle identifier manually though.
set_target_properties(appWebSocSv PROPERTIES
#    MACOSX_BUNDLE_GUI_IDENTIFIER com.example.appWebSocSv
    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
    MACOSX_BUNDLE TRUE
    WIN32_EXECUTABLE TRUE
)

target_link_libraries(appWebSocSv
    PRIVATE Qt6::Quick
)
target_link_libraries(appWebSocSv PRIVATE Qt6::Core)
target_link_libraries(appWebSocSv PRIVATE Qt6::WebSockets)
target_link_libraries(appWebSocSv PRIVATE Qt6::Core)
target_link_libraries(appWebSocSv PRIVATE Qt6::Core)

include(GNUInstallDirs)
install(TARGETS appWebSocSv
    BUNDLE DESTINATION .
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
